# yamp

./: .gitignore  CMakeLists.txt  README.md  TODOS  build.sh
client/: CMakeLists.txt  main.go
client/src/yamp/: yamp.pb.go
cmake/: FindProtobuf.cmake
protos/: yamp.pb.go  yamp.proto
server/: CMakeLists.txt
server/include/: commands.h  commands.hpp  config.h  config.hpp  manager.h  manager.hpp  music.h  music.hpp  musiclist.hpp  song.h  song.hpp  sound.h  sound.hpp  utils.h
server/src/: commands.cpp  config.cpp  main.cpp  manager.cpp  music.cpp  musiclist.cpp  song.cpp  sound.cpp  utils.cpp
